# rustimate

./: .dockerignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  appveyor.yml
crates/assets/: Cargo.toml  README.md
crates/assets/embed/: client.js
crates/assets/embed/wasm/: rustimate.module.wasm
crates/assets/src/: lib.rs
crates/assets/stylesheets/: style.scss
crates/client/: Cargo.toml  README.md  client.js  rustimate.js
crates/client/src/: ctx.rs  event_handler.rs  html.rs  js.rs  lib.rs  logging.rs  members.rs  message_handler.rs  poll_result.rs  polls.rs  session_ctx.rs  votes.rs
crates/client/src/socket/: ws.rs  ws_events.rs  ws_handlers.rs
crates/client/src/templates/: card.rs  member.rs  poll.rs
crates/controllers/: Cargo.toml  README.md
crates/controllers/src/: admin.rs  home.rs  lib.rs  routes.rs  session.rs  static_file.rs  testbed.rs  websocket.rs  websocket_msg.rs
crates/controllers/src/forms/: profile_form.rs
crates/controllers/src/util/: actions.rs  ctx.rs  router.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  member.rs  participant.rs  poll.rs  profile.rs  session.rs  session_ctx.rs  util.rs
crates/core/src/messages/: req.rs  rsp.rs
crates/service/: Cargo.toml  README.md
crates/service/src/: cache.rs  cfg.rs  conn.rs  ctx.rs  files.rs  handler.rs  lib.rs  profile.rs  session.rs
crates/templates/: Cargo.toml  README.md
crates/templates/src/: admin.rs  connections.rs  error.rs  gallery.rs  home.rs  lib.rs  modals.rs  profile.rs  session.rs  settings.rs  testbed.rs  utils.rs
crates/templates/src/components/: backtrace.rs  card.rs  flash.rs  header.rs  navbar.rs  page.rs  simple.rs
doc/: features.md  installing.md  scripts.md
project/homebrew/: readme.md  rustimate.rb  update.sh
project/rpm/: readme.md  rustimate.spec
project/windows/: app.exe.manifest  rustimate.rc
src/: app.rs  args.rs  cfg.rs  lib.rs  log.rs  main.rs  server.rs
