[package]
name = "rustimate"
version = "0.1.0"
authors = ["Kyle U <kyle@kyleu.com>"]
edition = "2018"
description = "A planning poker app, mostly developed to learn Rust"
readme = "README.md"
categories = ["development-tools", "web-programming", "web-programming::http-server"]
keywords = ["estimate", "poker", "agile", "planning"]
homepage = "https://estimate.poker"
repository = "https://github.com/kyleu/rustimate"
license = "MIT"
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]
build = "build.rs"

[workspace]
members = [
  "crates/assets",
  "crates/client",
  "crates/core",
  "crates/controllers",
  "crates/templates"
]

[lib]
crate-type = ["dylib", "staticlib", "rlib"]
name = "rustimate"

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-server = "1.0.1"
actix-service = "1.0.1"
actix-session = "0.3.0"
actix-utils = "1.0.4"
actix-web = "2.0.0"
actix-web-codegen = "0.2.0"
anyhow = "1.0.26"
app_dirs2 = "2.0.4"
arrayvec = "0.5.1"
bincode = "1.2.1"
bitflags = "1.2.1"
clap = "2.33.0"
rustimate-controllers = { version = "0.1.0", path = "crates/controllers" }
rustimate-core = { version = "0.1.0", path = "crates/core" }
rustimate-service = { version = "0.1.0", path = "crates/service" }
rustimate-templates = { version = "0.1.0", path = "crates/templates" }
failure = "0.1.6"
flate2 = "1.0.13"
futures = "0.3.1"
http = "0.2.0"
iovec = "0.1.4"
libc = "0.2.66"
nodrop = "0.1.14"
ryu = "1.0.2"
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
slog-async = "2.3.0"
slog-json = "2.3.0"
slog-term = "2.4.2"
tokio-reactor = "0.1.11"
tokio-sync = "0.1.7"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.14.0", default-features = false }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true

[badges]
appveyor = { repository = "kyleu/rustimate" }
is-it-maintained-issue-resolution = { repository = "kyleu/rustimate" }
is-it-maintained-open-issues = { repository = "kyleu/rustimate" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "kyleu/rustimate" }

[package.metadata.rpm]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rustimate = { path = "/usr/bin/rustimate" }
