[package]
name = "rustimate-client"
version = "0.0.1"
authors = ["Kyle U <kyle@kyleu.com>"]
edition = "2018"
description = "WASM web client sources for rustimate"
readme = "README.md"
categories = ["wasm", "web-programming", "web-programming::websocket"]
homepage = "https://estimate.poker"
repository = "https://github.com/kyleu/rustimate"
license = "MIT"
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustimate-core = { version = "0.0.1", path = "../core" }

anyhow = "1.0.25"
console_error_panic_hook = "0.1.6"
instant = "0.1.2"
js-sys = "0.3.32"
maud = "0.21.0"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.55", features = ["nightly"] }
wasm-bindgen-futures = "0.4.5"
web-sys = { version = "0.3.32", features = [
  "BinaryType",
  "Blob",
  "console",
  "CssStyleDeclaration",
  "Document",
  "DomStringMap",
  "DomTokenList",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "FileReader",
  "FileReaderSync",
  "HtmlBodyElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "KeyboardEvent",
  "Location",
  "MessageEvent",
  "Node",
  "NodeList",
  "Storage",
  "WebSocket",
  "Window"
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.5"
