[package]
name = "rustimate-controllers"
version = "0.0.1"
authors = ["Kyle U <kyle@kyleu.com>"]
edition = "2018"
description = "HTTP controllers for the rustimate server"
readme = "README.md"
categories = ["development-tools", "web-programming", "web-programming::websocket"]
keywords = ["wasm"]
homepage = "https://estimate.poker"
repository = "https://github.com/kyleu/rustimate"
license = "MIT"

[dependencies]
rustimate-assets = { version = "0.0.1", path = "../assets" }
rustimate-core = { version = "0.0.1", path = "../core" }
rustimate-service = { version = "0.0.1", path = "../service" }
rustimate-templates = { version = "0.0.1", path = "../templates" }

actix = "0.8.3"
actix-http = "0.2.11"
actix-service = "0.4.2"
actix-session = "0.2.0"
actix-web = "1.0.9"
actix-web-actors = "1.0.3"
anyhow = "1.0.25"
bytes = "0.4.12"
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
futures = "0.1.29"
maud = "0.21.0"
mime = "0.3.14"
mime_guess = "2.0.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
