[package]
name = "rustimate-service"
version = "0.0.1"
authors = ["Kyle U <kyle@kyleu.com>"]
edition = "2018"
description = "Application logic used by the rustimate server"
keywords = ["test", "noop", "pointless"]
homepage = "https://estimate.poker"
repository = "https://github.com/kyleu/rustimate"
license = "MIT"

[dependencies]
rustimate-core = { version = "0.0.1", path = "../core" }

anyhow = "1.0"
chrono = "0.4.9"
postgres = { version = "0.17.0-alpha.1", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_7"] }
r2d2 = "0.8.6"
r2d2_postgres = "0.14.0"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
