[package]
name = "rustimate-service"
version = "0.0.1"
authors = ["Kyle U <kyle@kyleu.com>"]
edition = "2018"
description = "Application logic used by the rustimate server"
readme = "README.md"
categories = ["development-tools"]
keywords = ["service"]
homepage = "https://estimate.poker"
repository = "https://github.com/kyleu/rustimate"
license = "MIT"

[dependencies]
rustimate-core = { version = "0.0.1", path = "../core" }

anyhow = "1.0.25"
chrono = "0.4.9"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
